--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <button class="head__button button ">Оставить заявку</button>
 
-                <div class="head__main-img " style="background-image: url(../img/head/header-man.svg);"></div>
+                <div class="head__main-img " style="background-image: url(img/head/header-man.svg);"></div>
 
                 <div class="head__info ">
                     <div class="head__info-item ">
