--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </span>
                 </div>
                 <div class="idc-button__wrapper">
-                    <a href="#" class="idc-button idc-flex ">Оставить заявку</a>
+                    <a href="#" class="idc-button">Оставить заявку</a>
                 </div>
                 <div class="idc-head__main-img " style="background-image: url(img/head/header-man.svg);"></div>
                 <div class="idc-head__info idc-flex ">
@@ -110,19 +110,19 @@
                     <div class="idc-analyse__list-block">
                         <ul class="idc-analyse__list">
                             <li class="idc-analyse__list-item idc-mini-title">
-                                <span class="idc-analyse__vector" data-aos="zoom-in" data-aos-delay="500" data-aos-duration="500">
+                                <span class="idc-analyse__vector idc-analyse__vector_1">
                                     <img src="img/icons/vector.svg" alt="/">
                                 </span> Сколько нужных мне кандидатов на рынке? <span class="idc-subtitle ">Составим
                                     портрет соискателя и проверим объем спроса в разрезе профобласти и региона</span>
                             </li>
                             <li class="idc-analyse__list-item idc-mini-title">
-                                <span class="idc-analyse__vector" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="500">
+                                <span class="idc-analyse__vector idc-analyse__vector_2">
                                     <img src="img/icons/vector.svg" alt="/">
                                 </span> Каковы их зарплатные ожидания? <span class="idc-subtitle">Проанализируем
                                     требования по заработной плате</span>
                             </li>
                             <li class="idc-analyse__list-item idc-mini-title">
-                                <span class="idc-analyse__vector" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="500">
+                                <span class="idc-analyse__vector idc-analyse__vector_3">
                                     <img src="img/icons/vector.svg" alt="/">
                                 </span> Насколько моя вакансия «в рынке»? <span class="idc-subtitle">Определим
                                     количество предложений работодателей и конкурентоспособность вашей вакансии</span>
@@ -138,18 +138,21 @@
                     <div class="idc-analyse__list-block">
                         <ul class="idc-analyse__list">
                             <li class="idc-analyse__list-item-two idc-mini-title">
-                                <span class="idc-analyse__vector" data-aos="zoom-in" data-aos-delay="2000" data-aos-duration="500">
+                                <span class="idc-analyse__vector idc-analyse__vector_4">
                                     <img src="img/icons/vector.svg" alt="/">
                                 </span> Как составить мотивирующий на отклик текст вакансии? <span class="idc-subtitle">Мы напишем его на языке вашей целевой аудитории</span>
                             </li>
                             <li class="idc-analyse__list-item-two idc-mini-title ">
-                                <span class="idc-analyse__vector" data-aos="zoom-in" data-aos-delay="2500" data-aos-duration="500">
+                                <span class="idc-analyse__vector idc-analyse__vector_5">
                                     <img src="img/icons/vector.svg" alt="/">
                                 </span> Как повысить посещаемость моей вакансии? <span class="idc-subtitle">Оформим
                                     текст с учетом его отображения в сниппете
                                 </span>
                                 <div class="idc-information">
-                                    <img src="img/icons/i.svg" alt="/">
+                                    <div class="idc-information__img-wrapper">
+                                        <img class="idc-information__img" src="img/icons/i.svg" alt="/">
+                                        <img class="idc-information__img_hovered" src="img/icons/i-hover.svg" alt="/">
+                                    </div>
                                     <div class="idc-information__title">
                                         «Сниппет — информационный блок, показывающий внутреннее содержание ссылки в поисковой выдаче. Сниппет вакансии показывает кандидату ее краткое описание, чтобы он мог оценить ее содержание.»
                                         <div class="idc-title-arrow"></div>
@@ -158,7 +161,7 @@
 
                             </li>
                             <li class="idc-analyse__list-item-two idc-mini-title ">
-                                <span class="idc-analyse__vector" data-aos="zoom-in" data-aos-delay="3000" data-aos-duration="500">
+                                <span class="idc-analyse__vector idc-analyse__vector_6">
                                     <img src="img/icons/vector.svg" alt="/">
                                 </span> Как увеличить количество релевантных откликов? <span class="idc-subtitle">Донесем преимущества работы в вашей компании</span>
                             </li>
@@ -166,7 +169,7 @@
                     </div>
                 </div>
                 <div class="idc-button__wrapper">
-                    <a href="#" class="idc-button idc-flex ">Оставить заявку</a>
+                    <a href="#" class="idc-button"><b>Оставить заявку</b> </a>
                 </div>
             </div>
 
@@ -212,7 +215,7 @@
                     </div>
 
                     <div class="idc-instr__animate-arrow">
-                        <span data-aos="zoom-in" data-aos-delay="50" data-aos-duration="300">
+                        <span class="idc-instr__arrow_start">
                             <svg class="idc-instr__arrow icon" width="147" height="195" viewBox="0 0 147 195" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path class="idc-instr__arrow_path" data-aos="animate-arrow"
                                     d="M2.02344 0.31543C-6.06591 115.517 34.4978 160.315 145.998 188.815" stroke="black"
@@ -223,14 +226,13 @@
                             </svg>
                         </span>
 
-                        <span data-aos="zoom-in" data-aos-delay="3000" data-aos-duration="1500">
-                            <svg  class="idc-instr__arrow_path_arrow" width="11" height="15" viewBox="0 0 11 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span class="idc-instr__arrow_end">
+                            <svg width="11" height="15" viewBox="0 0 11 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M6.06298 0.509739C5.79222 0.0283809 5.1825 -0.142339 4.70114 0.128424C4.21979 0.399188 4.04907 1.0089 4.31983 1.49026L6.06298 0.509739ZM1.20114 12.6284C0.719787 12.8992 0.549067 13.5089 0.819831 13.9903C1.09059 14.4716 1.70031 14.6423 2.18167 14.3716L1.20114 12.6284ZM9.69141 9L10.1817 9.87158C10.663 9.60081 10.8337 8.9911 10.563 8.50974L9.69141 9ZM4.31983 1.49026L8.81983 9.49026L10.563 8.50974L6.06298 0.509739L4.31983 1.49026ZM9.20114 8.12842L1.20114 12.6284L2.18167 14.3716L10.1817 9.87158L9.20114 8.12842Z"
                                     fill="black" fill-opacity="0.5" />
                                 </svg>
                         </span>
-
                     </div>
 
 
@@ -242,22 +244,19 @@
                 <div class="idc-instr__get-list idc-flex">
                     <div class="idc-instr__get-item idc-vector-one">
                         <span class="idc-instr__vector">
-                            <img src="img/icons/vector-max.svg" alt="/" data-aos="zoom-in" data-aos-delay="1500"
-                                data-aos-duration="500">
+                            <img src="img/icons/vector-max.svg" alt="/">
                         </span>
                         <p class="idc-instr__step">Презентацию с аналитическими данными по рынку</p>
                     </div>
                     <div class="idc-instr__get-item idc-vector-two">
                         <span class="idc-instr__vector">
-                            <img src="img/icons/vector-max.svg" alt="/" data-aos="zoom-in" data-aos-delay="2000"
-                                data-aos-duration="500">
+                            <img src="img/icons/vector-max.svg" alt="/">
                         </span>
                         <p class="idc-instr__step">Готовый текст вашей вакансии, основанный на экспертизе hh.ru</p>
                     </div>
                     <div class="idc-instr__get-item idc-vector-three">
                         <span class="idc-instr__vector">
-                            <img src="img/icons/vector-max.svg" alt="/" data-aos="zoom-in" data-aos-delay="2500"
-                                data-aos-duration="500">
+                            <img src="img/icons/vector-max.svg" alt="/">
                         </span>
                         <p class="idc-instr__step">Рекомендации по продвижению вакансии</p>
                     </div>
@@ -310,7 +309,7 @@
             </div>
             <div class="idc-container idc-flex" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1200">
                 <div class="idc-button__wrapper">
-                    <a href="#" class="idc-button idc-flex ">Оставить заявку</a>
+                    <a href="#" class="idc-button">Оставить заявку</a>
                 </div>
                 <h1 class="idc-title">Почему мы?</h1>
                 <div class="idc-whyus__wrapper idc-flex">
@@ -400,24 +399,30 @@
                         <div class="idc-article__swiper-wrapper swiper-wrapper">
                             <!-- Slides -->
                             <div class="idc-article__swiper-slide swiper-slide">
-                                <div class="idc-article__img-wrapper">
-                                    <img class="idc-article__img" src="img/article/people.png" alt="/">
-                                </div>
-                                <p class="idc-article__swiper-title">Рерайтинг вакансий: три способа и одно верное решение
-                                </p>
+                                <a class="idc-article__swiper-link" href="">
+                                    <div class="idc-article__img-wrapper">
+                                        <img class="idc-article__img" src="img/article/people.png" alt="/">
+                                    </div>
+                                    <p class="idc-article__swiper-title">Рерайтинг вакансий: три способа и одно верное решение</p>
+                                </a>
                             </div>
                             <div class="idc-article__swiper-slide swiper-slide">
-                                <div class="idc-article__img-wrapper">
-                                    <img class="idc-article__img" src="img/article/vacants.png" alt="/">
-                                </div>
-                                <p class="idc-article__swiper-title">Как сформулировать вакансию для хороших откликов: пошаговая инструкция</p>
+                                <a class="idc-article__swiper-link" href="">
+                                    <div class="idc-article__img-wrapper">
+                                        <img class="idc-article__img" src="img/article/vacants.png" alt="/">
+                                    </div>
+                                    <p class="idc-article__swiper-title">Как сформулировать вакансию для хороших откликов: пошаговая инструкция</p>
+                                </a>
+
                             </div>
                             <div class="idc-article__swiper-slide swiper-slide">
-                                <div class="idc-article__img-wrapper">
-                                    <img class="idc-article__img" src="img/article/girl.png" alt="/">
-                                </div>
-                                <p class="idc-article__swiper-title">Почему нет откликов на вакансию? Чек-лист типичных ошибок
-                                </p>
+                                <a class="idc-article__swiper-link" href="">
+                                    <div class="idc-article__img-wrapper">
+                                        <img class="idc-article__img" src="img/article/girl.png" alt="/">
+                                    </div>
+                                    <p class="idc-article__swiper-title">Почему нет откликов на вакансию? Чек-лист типичных ошибок</p>
+                                </a>
+
                             </div>
                         </div>
 
@@ -442,9 +447,9 @@
             </div>
         </div>
 
-        <div class="idc-prefooter">
+        <div class="idc-prefooter" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1200">
             <div class="idc-bg-wrapper idc-gradient-bg"></div>
-            <div class="idc-container idc-flex" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1200">
+            <div class="idc-container idc-flex">
                 <div class="shape rellax " style="left: 95%;top: 15%; " data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r1.svg" alt="/"></div>
                 <div class="shape rellax " style="left: 75%;top: 20%; " data-rellax-speed="2"><img src="img/prefooter animation/pf-paper-r2.svg" alt="/"></div>
                 <div class="shape rellax " style="left: 55%;top: 40%; " data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r3.svg" alt="/"></div>
@@ -453,12 +458,18 @@
                 <div class="idc-prefooter__title-wrapper">
                     <h1 class="idc-title">Привлекайте релевантных кандидатов вместе с Вакансией от эксперта</h1>
                     <div class="idc-button__wrapper">
-                        <a href="#" class="idc-button idc-flex ">Оставить заявку</a>
+                        <a href="#" class="idc-button">Оставить заявку</a>
                     </div>
                 </div>
                 <div class="idc-prefooter__img-wrapper">
                     <img class="idc-prefooter__img" src="img/prefooter/prefooter-woman.svg" alt="/">
                 </div>
+            </div>
+        </div>
+
+        <div class="idc-footer">
+            <div class="idc-bg-wrapper">
+                <h1>Здесь будет footer</h1>
             </div>
         </div>
         <script src="js/aos.js"></script>
