--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 <body>
     <div class="idc-main-wrapper">
-        <div class="shape rellax" style="left: -15%; top: 40%;" data-rellax-speed="-9"><img src="img/header animation/zigzag.svg" alt="zigzag"></div>
-        <div class="shape rellax" style="left: 95%; top: 10%; transform: rotate(-40deg);" data-rellax-speed="-9"><img src="img/header animation/zigzag.svg" alt="zigzag"></div>
-        <div class="shape rellax" style="left: -10%;top: 10%; opacity: 0.4; font-weight: 600; font-size: 140px; line-height: 171px; color: #DBDEE4; transform: rotate(-25deg);" data-rellax-speed="-10">A</div>
-        <div class="shape rellax" style="left: 95%; top: 35%; opacity: 0.4; font-weight: 600; font-size: 140px; line-height: 171px; color: #DBDEE4; transform: rotate(25deg);" data-rellax-speed="-10">D</div>
+        <div class="idc-main-wrapper__fixed-el" style="left: 11%; top: 80%;" data-rellax-speed="-9"><img src="img/header animation/zigzag.svg" alt="zigzag"></div>
+        <div class="idc-main-wrapper__fixed-el" style="right: 11%; top: 40%; transform: rotate(-40deg);" data-rellax-speed="-9"><img src="img/header animation/zigzag.svg" alt="zigzag"></div>
+        <div class="idc-main-wrapper__fixed-el" style="left: 7%;top: 35%; opacity: 0.4; font-weight: 600; font-size: 140px; line-height: 171px; color: #DBDEE4; transform: rotate(-25deg);" data-rellax-speed="-10">A</div>
+        <div class="idc-main-wrapper__fixed-el" style="right: 8%; top: 70%; opacity: 0.4; font-weight: 600; font-size: 140px; line-height: 171px; color: #DBDEE4; transform: rotate(25deg);" data-rellax-speed="-10">D</div>
 
 
 
@@ -509,7 +509,7 @@
             </div>
         </div>
 
-        <div class="idc-prefooter" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1200">
+        <div class="idc-prefooter" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1200">
             <div class="idc-bg-wrapper idc-gradient-bg"></div>
             <div class="idc-container idc-flex">
                 <div class="shape rellax " style="left: 95%;top: 15%; " data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r1.svg" alt="/"></div>
@@ -539,7 +539,6 @@
         <script src="js/swiper-bundle.min.js "></script>
         <script src="js/rellax.min.js "></script>
         <script src="js/swiper.js "></script>
-        <script src="js/aosinit.js"></script>
         <script src="js/main.js "></script>
 </body>
 
