--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
         <div class="idc-prefooter" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1200">
             <div class="idc-bg-wrapper idc-gradient-bg"></div>
             <div class="idc-container idc-flex">
-                <div class="shape rellax " style="left: 90%;top: 15%; " data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r1.svg" alt="/"></div>
-                <div class="shape rellax " style="left: 75%;top: 20%; " data-rellax-speed="2"><img src="img/prefooter animation/pf-paper-r2.svg" alt="/"></div>
-                <div class="shape rellax " style="left: 55%;top: 40%; " data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r3.svg" alt="/"></div>
+                <div class="shape rellax prefooter__paper-1" data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r1.svg" alt="/"></div>
+                <div class="shape rellax prefooter__paper-2" data-rellax-speed="2"><img src="img/prefooter animation/pf-paper-r2.svg" alt="/"></div>
+                <div class="shape rellax prefooter__paper-3" data-rellax-speed="-2"><img src="img/prefooter animation/pf-paper-r3.svg" alt="/"></div>
 
 
                 <div class="idc-prefooter__title-wrapper">
